# pyrainbird

./: .codespellignore  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST  README  README.md  __init__.py  pyproject.toml  pyproject.toml.rej  pytest.ini  rainbird_client.py  rainbird_crypto_test.py  renovate.json5  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_requirements.txt
.agent/skills/gh-release/: SKILL.md
.agent/skills/gh-release/scripts/: create-release.sh
.github/workflows/: cruft.yaml  lint.yaml  pages.yaml  pages.yml  publish.yaml  python-app.yaml  python-app.yml  python-publish.yaml  python-pubsh.yaml  test.yaml
docs/: CLIENT_DESIGN.md  DEVICE_REGISTRY.md  MOVE_HTTPS_DISCOVERY_INTO_PYRAINBIRD_LIBRARY_2026-02-21.md  MOVE_HTTPS_DISCOVERY_INTO_PYRAINBIRD_LIBRARY_2026-02-21_WORKLOG.md  PROTOCOL_ESP_ME_TM2.md  PROTOCOL_IQ4.md  PROTOCOL_LCR_SERIES.md  PROTOCOL_UNIVERSAL.md  RAINBIRD_PROTOCOL_SPEC.md  SIP_POROTOCL_COMMON.md  UNIMPLEMENTED_FEATURES.md
examples/: mitm_rainbird.py  rainbird_tool.py
pyrainbird/: __init__.py  async_client.py  client.py  const.py  data.py  encryption.py  exceptions.py  rainbird.py  timeline.py  timespan.py
pyrainbird/cloud/: __init__.py  client.py  models.py  stream.py
pyrainbird/fake/: __main__.py  device.py
pyrainbird/resources/: __init__.py  models.yaml  sipcommands.json  sipcommands.yaml  universalcommands.yaml
pyrainbird/testing/: __init__.py  __main__.py  device.py  server.py
script/: run-mypy.sh
test/: async_client_test.py  conftest.py  data_test.py  integration_test.py  rainbird_test.py  test.py
tests/: conftest.py  fake_device.py  test_async_client.py  test_client.py  test_cloud_client.py  test_cloud_stream.py  test_create_controller.py  test_data.py  test_integration.py  test_rainbird.py  test_url_normalization.py
tests/__snapshots__/: test_async_client.ambr  test_cloud_stream.ambr
tests/cloud/: __init__.py  test_client.py  test_controller.py  test_models.py  test_stream.py
tests/cloud/testdata/: scalar_int.json  scalar_str.json  station_epoch_timestamp.json  station_normal_duration.json  station_past_epoch_timestamp.json  stream_events.jsonl
tests/fake/: test_server.py
tests/testdata/: ack.yaml  available_stations.yaml  combined_controller_state.yaml  current_queue_me3.yaml  current_queue_tm2.yaml  date_time.yaml  get_schedule.yaml  get_schedule_me3.yaml  irrigation_state.yaml  model_and_version.yaml  rain_delay.yaml  rain_sensor.yaml  schedule.yaml  schedule_custom.yaml  schedule_cyclic.yaml  schedule_esp_me.yaml  schedule_odd_even.yaml  schedule_rain_delay.yaml  settings.yaml
tests/testing/: test_client.py  test_server.py
