[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "pyrainbird"
version = "6.0.6"
license = "MIT"
license-files = ["LICENSE"]
description = "Rain Bird Controller"
readme = "README.md"
authors = [
  { name = "J.J.Barrancos", email = "jordy@fusion-ict.nl" },
  { name = "Allen Porter", email = "allen.porter@gmail.com" },
]
requires-python = ">=3.13"
classifiers = []
dependencies = [
  "pycryptodome>=3.16.0",
  "PyYAML>=5.4",
  "mashumaro>=3.12",
  "python-dateutil>=2.8.2",
  "ical>=4.2.9",
  "aiohttp_retry>=2.8.3",
]

[project.urls]
Source = "https://github.com/allenporter/pyrainbird"

[tool.setuptools.packages.find]
include = ["pyrainbird*"]

[tool.setuptools.package-data]
"pyrainbird.resources" = ["*.yaml"]

[tool.mypy]
exclude = [
  "tests/",
  "examples/",
  "venv/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = [
    "import-untyped",
]
extra_checks = false
disallow_subclassing_any = true
disallow_untyped_decorators = false

# TODO: Enable these error codes below after cleaning up
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = false
disallow_untyped_calls = false
warn_unreachable = false
