[metadata]
name = pyrainbird
version = 0.6.2
description = Rain Bird Controller,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbarrancos/pyrainbird/
author = J.J.Barrancos
author_email = jordy@fusion-ict.nl
license = MIT
license_file = LICENSE
keywords = Rain Bird

[options]
packages = find:
python_requires >= 3.9
install_requires =
  pycryptodome~=3.15.0
  requests>=2.22.0
  PyYAML>=5.4
install_package_data = True
package_dir =
  = .

[options.packages.find]
where = .
exclude =
    test
    test.*

[options.package_data]
pyrainbird =
    resources/sipcommands.yaml
    resources/models.yaml

[flake8]
max-line-length = 88
ignore =
    E501,  # black: Line too long
    W503,  # black: Line break before binary operator
    E203   # black: Whitespace before :
