[metadata]
name = pyrainbird
version = 6.0.1
description = Rain Bird Controller
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/pyrainbird
author = J.J.Barrancos
author_email = jordy@fusion-ict.nl
license = MIT
license_file = LICENSE
keywords = Rain Bird

[options]
packages = find:
python_requires = >=3.11
install_requires =
  pycryptodome>=3.16.0
  requests>=2.22.0
  PyYAML>=5.4
  mashumaro>=3.12
  python-dateutil>=2.8.2
  ical>=4.2.9
  aiohttp_retry>=2.8.3

install_package_data = True
package_dir =
  = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
pyrainbird =
    py.typed
    resources/sipcommands.yaml
    resources/models.yaml
